--- a/templates/index.jade
+++ b/templates/index.jade
@@ -1,6 +1,7 @@
 html
 	head
 		link(rel="stylesheet", href="http://yui.yahooapis.com/pure/0.5.0/pure-min.css")
+		link(rel="stylesheet", href="static/css/style.css")
 	
 	body
 		div(class="container")
