--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,13 @@
+body {
+    background-color: #f0f0f0;
+}
+
 .container {
 	text-align: center;
+}
+
+.continue {
+    margin-top: 1%;
+    font-weight: bold;
+    background-color: #cacaca;
 }
