--- a/templates/index.jade
+++ b/templates/index.jade
@@ -1,9 +1,17 @@
 html
-	head
-		link(rel="stylesheet", href="http://yui.yahooapis.com/pure/0.5.0/pure-min.css")
-		link(rel="stylesheet", href="static/css/style.css")
-	
-	body
-		div(class="container")
-			div(class="title")
-				h1 hello
+    head
+        link(rel="stylesheet", href="http://yui.yahooapis.com/pure/0.5.0/pure-min.css")
+        link(rel="stylesheet", href="static/css/style.css")
+
+    body
+        div(class="container")
+            div(class="title")
+                h1 AniGrade UI Test
+                hr 
+            div(class="content")
+                p Thank you for checking out AniGrade!
+                p You will go through some different versions of the same page.
+                p Please have a play with each and rate them as you go!
+                p Click the button below to continue.
+                a(href="dragndrop") 
+                    button(class="pure-button continue") Continue
